--- a/views/index.mustache
+++ b/views/index.mustache
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>Movie Watchlist</h1>
+
+    <form action="/add" method="POST">
+        <input type="text" name="title" placeholder="Movie Title" required>
+        <input type="text" name="genre" placeholder="Genre">
+        <input type="number" name="year" placeholder="Year" min="1900">
+        <input type="number" name="rating" placeholder="Rating" min="0" max="10" step="0.1">
+        <button type="submit">Add Movie</button>
+    </form>
+
     <ul>
         {{#movies}}
         <li>{{title}} ({{year}}) - {{genre}} - Rating: {{rating}}</li>
