Added filtering and sorting features

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -16,10 +16,34 @@
         <button type="submit">Add Movie</button>
     </form>
 
+    <form method="GET" action="/">
+        <label for="genre">Filter by Genre:</label>
+        <select name="genre" id="genre">
+            <option value="All" {{#equal selectedGenre "All"}}selected{{/equal}}>All</option>
+            <option value="Action" {{#equal selectedGenre "Action"}}selected{{/equal}}>Action</option>
+            <option value="Comedy" {{#equal selectedGenre "Comedy"}}selected{{/equal}}>Comedy</option>
+            <option value="Drama" {{#equal selectedGenre "Drama"}}selected{{/equal}}>Drama</option>
+        </select>
+
+        <label for="sort">Sort by:</label>
+        <select name="sort">
+            <option value="">None</option>
+            <option value="rating">Rating</option>
+        </select>
+
+        <button type="submit">Apply</button>
+    </form>
+
     <ul>
         {{#movies}}
         <li style="background-color: {{#watched}}lightgrey{{/watched}}; font-weight: {{#watched}}bold{{/watched}};">
             {{title}} ({{year}}) - {{genre}} - Rating: {{rating}}
+            <form action="/update/{{id}}" method="POST">
+                <button type="submit">Toggle Watched</button>
+            </form>
+            <form action="/delete/{{id}}" method="POST">
+                <button type="submit">Delete</button>
+            </form>
         </li>
         {{/movies}}
     </ul>
