Added clear button to reset filters

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -32,6 +32,7 @@
         </select>
 
         <button type="submit">Apply</button>
+        <a href="/" style="background-color: red; color: white; padding: 5px; text-decoration: none;">Clear</a>
     </form>
 
     <ul>
